<resources>
    <string name="app_name">IELTStest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_session">Select Examination Session:</string>
    <string name="scored">Your score is </string>
    <string name="start_test">Start Test</string>
    <string name="proceed">Proceed</string>
    <string name="wait_message">Please wait while we prepare all the required resources.</string>
    <string name="gmailadd">Gmail Address</string>
    <string name="password">Password</string>
    <string name="registeracc">Register for Account</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login1">Login</string>
    <string name="start2">Start</string>
    <string name="welcommessage">Welcome to IELTS Listening Test application.</string>
    <string name="prepmmessage">Please wait while we prepare the test.</string>
    <string name="instructions">TAKE NOTE: You may start the test now. Please wear earphones. Please note that you are not allowed to leave the app once the test has started. Doing so will be considered cheating and your test results will be invalid.</string>
    <string name="reporttype">Choose Report Type :</string>
    <string name="go">Go</string>
    <string name="reporthis">Results History</string>
    <string name="reporttitle1">Results History Report</string>
    <string name="grade">grade</string>
    <string name="usagestat">Usage Statistics</string>
    <string name="usagereport">App Usage Statistics Report</string>
</resources>
